k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-ns
  labels:
    name: node
---
apiVersion: v1
kind: Namespace
metadata:
  name: client-ns
  labels:
    name: client
