k8s/node-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mynode
  spec:
    replicas: 2
    template:
      metadata:
        labels:
          app: mynode
      spec:
        containers:
          image: prys/mynode
          command: ["node"]
          args: ["/root/node/api.js"]
