k8s/node-AWS-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynode-service
spec:
  type: LoadBalancer
  ports:
  - port: 3412
    protocol: TCP
  selector:
    app: mynode
