k8s/node-NodePort.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mynode-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mynode
    spec:
      containers:
      - name: mynode
        image: prys/mynode
        ports:
        - containerPort: 3412
        command: ["node"]
        args: ["/root/node/api.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: mynode-service
spec:
  type: NodePort
  ports:
  - port: 3412
    protocol: TCP
  selector:
    app: mynode
