k8s/deny_netpol.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: default-deny
  namespace: prys
spec:
  podSelector:
